[gd_scene load_steps=16 format=2]

[ext_resource path="res://gfx/snake.png" type="Texture" id=1]
[ext_resource path="res://Snake.gd" type="Script" id=2]
[ext_resource path="res://gfx/snake_attack.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 14 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 14 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 14 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 14 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 14 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 14 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 14 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 5.2068

[sub_resource type="CircleShape2D" id=11]
radius = 6.35211

[sub_resource type="CapsuleShape2D" id=12]
height = 100.139

[node name="Snake" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 2 )

[node name="SnakeAnimation" type="AnimatedSprite" parent="."]
position = Vector2( 305.05, 282.193 )
frames = SubResource( 9 )
animation = "attack"
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 305.05, 282.193 )
collision_layer = 2147483656
collision_mask = 2

[node name="hurtbox" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 304.489, 283.035 )
shape = SubResource( 11 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 305.931, 284.232 )
rotation = 1.5708
shape = SubResource( 12 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
